--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,32 @@ body {
 	line-height: 50px;
 }
 
+footer {
+	white-space: nowrap;
+	display: inline-block;
+	border-color: goldenrod;
+	border-width: 4px;
+	border-style: none;
+	border-radius: 10px;
+	font-weight: bold;
+	font-family: Verdana;
+	font-size: 16px;
+	background-color: rgba(39, 38, 43, 0.45);
+	color: aliceblue;
+	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.8);
+	padding: 8px;
+	line-height: 20px;
+	width: 30%;
+	position: fixed;
+	bottom: 2%;
+	left: 34%;
+}
+
+a {
+	color: cornflowerblue;
+	text-decoration: none;
+}
+
 .dropdown {
 	position: relative;
 	display: inline-block;
