--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ footer {
 }
 
 a {
-	color: cornflowerblue;
+	color: hsl(259, 44%, 8%);
 	text-decoration: none;
 }
 
@@ -115,7 +115,7 @@ a {
 	border-style: none;
 	border-radius: 4px;
 	min-width: 160px;
-	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.8);
+	box-shadow: 0px 8px 16px 0px rgb(141, 28, 62);
 	z-index: 1;
 }
 
