--- a/styles.css
+++ b/styles.css
@@ -1,124 +1,153 @@
 label {
-	padding: 4;
-	color: hsl(259, 44%, 8%);
-	border-width: 4;
-	border-style: none;
-	border-radius: 10px;
-	font-size: 28;
-	font-weight: bolder;
-	font-family: Verdana;
-	background-color: whitesmoke;
+  padding: 4;
+  color: hsl(259, 44%, 8%);
+  border-width: 4;
+  border-style: none;
+  border-radius: 10px;
+  font-size: 28;
+  font-weight: bolder;
+  font-family: Verdana;
+  background-color: whitesmoke;
 }
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-	-webkit-appearance: none;
-	margin: 0;
+  -webkit-appearance: none;
+  margin: 0;
 }
 
-input[type=number] {
-	-moz-appearance: textfield;
+input[type="number"] {
+  -moz-appearance: textfield;
 }
 
 .dropbtn {
-	font-size: 25;
+  font-size: 25;
 }
 
 .btn {
-	font-size: 30;
+  font-size: 30;
+}
+
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+  outline: none;
+}
+
+.month,
+.day {
+  width: 55px;
+}
+
+.year {
+  width: 100px;
+}
+
+input {
+  padding: 8;
+  background-color: hsl(212, 8%, 54%);
+  color: hsl(0, 0%, 100%);
+  border-color: hsl(0, 0%, 100%);
+  border-width: 4;
+  border-style: solid;
+  border-radius: 10px;
+  font-weight: bolder;
+  font-family: Verdana;
+  font-size: 20;
 }
 
 button {
-	padding: 8;
-	background-color: hsl(212, 8%, 54%);
-	color: hsl(0, 0%, 100%);
-	border-color: hsl(0, 0%, 100%);
-	border-width: 4;
-	border-style: solid;
-	border-radius: 10px;
-	font-weight: bolder;
-	font-family: Verdana;
+  padding: 8;
+  background-color: hsl(212, 8%, 54%);
+  color: hsl(0, 0%, 100%);
+  border-color: hsl(0, 0%, 100%);
+  border-width: 4;
+  border-style: solid;
+  border-radius: 10px;
+  font-weight: bolder;
+  font-family: Verdana;
 }
 
 button:hover {
-	padding: 8;
-	border-color: hsl(348, 80%, 33%);
-	background-color: hsl(348, 83%, 47%);
-	color: hsl(259, 44%, 8%);
-	border-width: 4;
-	border-style: solid;
-	border-radius: 10px;
-	font-weight: bolder;
-	font-family: Verdana;
+  padding: 8;
+  border-color: hsl(348, 80%, 33%);
+  background-color: hsl(348, 83%, 47%);
+  color: hsl(259, 44%, 8%);
+  border-width: 4;
+  border-style: solid;
+  border-radius: 10px;
+  font-weight: bolder;
+  font-family: Verdana;
 }
 
 body {
-	background-size: 140%;
-	background-position-x: 50%;
-	background-position-y: 100%;
-	background-color: hsl(259, 44%, 8%);
+  background-size: 140%;
+  background-position-x: 50%;
+  background-position-y: 100%;
+  background-color: hsl(259, 44%, 8%);
 }
 
 .center {
-	white-space: nowrap;
-	display: inline-block;
-	border-color: goldenrod;
-	border-width: 4px;
-	border-style: none;
-	border-radius: 10px;
-	font-weight: bold;
-	font-family: Verdana;
-	font-size: 25px;
-	background-color: rgba(39, 38, 43, 0.45);
-	color: aliceblue;
-	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.8);
-	padding: 8px;
-	line-height: 50px;
+  white-space: nowrap;
+  display: inline-block;
+  border-color: goldenrod;
+  border-width: 4px;
+  border-style: none;
+  border-radius: 10px;
+  font-weight: bold;
+  font-family: Verdana;
+  font-size: 25px;
+  background-color: rgba(39, 38, 43, 0.45);
+  color: aliceblue;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.8);
+  padding: 8px;
+  line-height: 50px;
 }
 
 .foot {
-	white-space: nowrap;
-	display: inline-block;
-	border-color: goldenrod;
-	border-width: 4px;
-	border-style: none;
-	border-radius: 10px;
-	font-weight: bold;
-	font-family: Verdana;
-	font-size: 16px;
-	background-color: rgba(39, 38, 43, 0.8);
-	color: aliceblue;
-	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.87);
-	padding: 8px;
-	line-height: 20px;
-	width: 30%;
-	position: fixed;
-	bottom: 2%;
-	left: 34%;
+  white-space: nowrap;
+  display: inline-block;
+  border-color: goldenrod;
+  border-width: 4px;
+  border-style: none;
+  border-radius: 10px;
+  font-weight: bold;
+  font-family: Verdana;
+  font-size: 16px;
+  background-color: rgba(39, 38, 43, 0.8);
+  color: aliceblue;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.87);
+  padding: 8px;
+  line-height: 20px;
+  width: 30%;
+  position: fixed;
+  bottom: 2%;
+  left: 34%;
 }
 
 a {
-	color: hsl(330, 61%, 48%);
-	text-decoration: none;
+  color: hsl(330, 61%, 48%);
+  text-decoration: none;
 }
 
 .dropdown {
-	position: relative;
-	display: inline-block;
-	line-height: 120px;
+  position: relative;
+  display: inline-block;
+  line-height: 120px;
 }
 
 .dropdown-content {
-	display: none;
-	position: absolute;
-	border-width: 0;
-	border-style: none;
-	border-radius: 4px;
-	min-width: 160px;
-	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.8);
-	z-index: 1;
+  display: none;
+  position: absolute;
+  border-width: 0;
+  border-style: none;
+  border-radius: 4px;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.8);
+  z-index: 1;
 }
 
 .dropdown:hover .dropdown-content {
-	display: block;
+  display: block;
 }
