--- a/styles.css
+++ b/styles.css
@@ -144,6 +144,7 @@ a {
   border-style: none;
   border-radius: 4px;
   min-width: 160px;
+  background-color: rgba(39, 38, 43, 0.45);
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.8);
   z-index: 1;
 }
