--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ input[type="number"] {
 }
 
 .btn {
-  font-size: 30;
+  font-size: 25;
 }
 
 input:focus,
@@ -88,7 +88,7 @@ body {
   background-color: hsl(259, 44%, 8%);
 }
 
-.center {
+.logo {
   white-space: nowrap;
   display: inline-block;
   border-color: goldenrod;
@@ -98,7 +98,24 @@ body {
   font-weight: bold;
   font-family: Verdana;
   font-size: 25px;
-  background-color: rgba(39, 38, 43, 0.45);
+  filter: drop-shadow(1px 1px 10px black);
+  color: aliceblue;
+  padding: 8px;
+  line-height: 50px;
+  width: 50%;
+}
+
+.center {
+  white-space: nowrap;
+  display: inline-block;
+  border-color: goldenrod;
+  border-width: 4px;
+  border-style: none;
+  border-radius: 10px;
+  font-weight: bold;
+  font-family: Verdana;
+  font-size: 20px;
+  background-color: rgba(39, 38, 43, 0.8);
   color: aliceblue;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.8);
   padding: 8px;
@@ -115,7 +132,7 @@ body {
   font-weight: bold;
   font-family: Verdana;
   font-size: 16px;
-  background-color: rgba(39, 38, 43, 0.8);
+  background-color: rgba(39, 38, 43, 0.7);
   color: aliceblue;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.87);
   padding: 8px;
@@ -139,6 +156,7 @@ a {
 .dropdown {
   position: relative;
   display: inline-block;
+  align-content: start;
   line-height: 120px;
 }
 
